--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,21 @@ p {
   padding: 0;
   margin: 0 0 30px 0;
 }
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 3px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat", sans-serif;
@@ -1176,9 +1191,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 #team .member {
   text-align: center;
   margin-bottom: 20px;
-  /* background: #000; */
+  background: #000;
   position: relative;
-  /* padding: 300px; */
 }
 
 #team .member .member-info {
@@ -1551,7 +1565,3 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 13px;
   color: #ddd;
 }
-/* #rohit{
-  margin-top: 400px;
-  margin-left:-200px ;
-} */
